--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 	<div class="what py-5" id="what">
 		<div class="container py-xl-5 py-lg-3">
 			<h3 class="title-w3 text-bl text-center font-weight-bold">What we do</h3>
-			<p class="title-sub mb-5 text-center">Best Benifits for your Body</p>
+			<p class="title-sub mb-5 text-center">Best Benefits for your Body</p>
 			<div class="row pt-xl-4">
 				<div class="col-lg-6 serv_bottom text-center mt-xl-3">
 					<div class="row mt-xl-4">
@@ -283,14 +283,14 @@
 							<div class="bottom-gd">
 								<img src="images/wh1.jpg" alt="" class="img-fluid">
 								<h3 class="my-3 font-weight-bold">Balance Body</h3>
-								<p>Sit amet mattis quam, sit amet excepteur sint occaecat cupidatat.</p>
+								<p>healthier way of our life can be a transformation in you.</p>
 							</div>
 						</div>
 						<div class="col-sm-6 mt-sm-0 mt-4">
 							<div class="bottom-gd">
 								<img src="images/wh2.jpg" alt="" class="img-fluid">
 								<h3 class="my-3 font-weight-bold">Nutrition Plan</h3>
-								<p>Sit amet mattis quam, sit amet excepteur sint occaecat cupidatat.</p>
+								<p>A continous planning for our customers along with our proper diet will be given .</p>
 							</div>
 						</div>
 					</div>
@@ -299,14 +299,14 @@
 							<div class="bottom-gd">
 								<img src="images/wh3.jpg" alt="" class="img-fluid">
 								<h3 class="my-3 font-weight-bold">Weight Loss Program</h3>
-								<p>Sit amet mattis quam, sit amet excepteur sint occaecat cupidatat.</p>
+								<p>Service to loose weight is highly enhanced program.</p>
 							</div>
 						</div>
 						<div class="col-sm-6 mt-sm-0 mt-4">
 							<div class="bottom-gd">
 								<img src="images/wh4.jpg" alt="" class="img-fluid">
 								<h3 class="my-3 font-weight-bold">Routein program</h3>
-								<p>Sit amet mattis quam, sit amet excepteur sint occaecat cupidatat.</p>
+								<p>Scheduled planning will be provided accordingly.</p>
 							</div>
 						</div>
 					</div>
@@ -427,7 +427,7 @@
 								</div>
 								<div class="col-10">
 									<h2 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">About Us</h2>
-									<p>Sed ut perspiciatis unde omnis iste natus error sit.</p>
+									<p>Contact for more information.</p>
 								</div>
 							</div>
 						</div>
@@ -438,7 +438,7 @@
 								</div>
 								<div class="col-10">
 									<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Who We Are</h3>
-									<p>Error sit antium dolorts remq hymue laud.</p>
+									<p>trained proffestional and nutritionist.</p>
 								</div>
 							</div>
 						</div>
@@ -451,7 +451,7 @@
 								</div>
 								<div class="col-10">
 									<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">We Offer</h3>
-									<p>Sed ut perspiciatis unde omnis iste natus error sit.</p>
+									<p>amiable services.</p>
 								</div>
 							</div>
 						</div>
@@ -462,7 +462,7 @@
 								</div>
 								<div class="col-10">
 									<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Popular In</h3>
-									<p>Error sit antium dolorts remq hymue laud.</p>
+									<p>our services.</p>
 								</div>
 							</div>
 						</div>
@@ -470,35 +470,17 @@
 				</div>
 				<div class="col-md-4 footer-grid_section_1its my-md-0 my-5">
 					<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Newsletter</h3>
-					<p>Be the first to get latest news and offers!<br>Sed ut perspiciatis unde omnis.</p>
+					<p>Be the first to get latest news and offers!<br>recieve latest packages updates .</p>
 					<form action="#" method="post" class="subscribe_form mt-4">
 						<input class="form-control" type="email" name="email" placeholder="Enter your email..." required="">
 						<button type="submit" class="btn btn-primary">Submit</button>
 					</form>
 					<!-- social icons -->
 					<div class="agileinfo_social_icons mt-4">
-						<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Connect With Social</h3>
+						<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Connect With us</h3>
 						<ul class="agileits_social_list list-unstyled">
-							<li>
-								<a href="#" class="w3_agile_facebook">
-									<span class="fa fa-facebook-f"></span>
-								</a>
-							</li>
-							<li class="mx-2">
-								<a href="#" class="agile_twitter">
-									<span class="fa fa-twitter"></span>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="w3_agile_dribble">
-									<span class="fa fa-dribbble"></span>
-								</a>
-							</li>
-							<li class="ml-2">
-								<a href="#" class="w3_agile_google">
-									<span class="fa fa-google-plus"></span>
-								</a>
-							</li>
+							
+							
 						</ul>
 					</div>
 					<!-- social icons -->
@@ -508,11 +490,11 @@
 					<div class="contact-info">
 						<div class="footer-style-w3ls">
 							<h4 class="text-li mb-2">Phone</h4>
-							<p>+121 098 8907 9987</p>
+							<p>+91-9290945058</p>
 						</div>
 						<div class="footer-style-w3ls my-4">
 							<h4 class="text-li mb-2">Email </h4>
-							<p><a href="mailto:info@example.com">info@example.com</a></p>
+							<p><a href="mailto:razeenamd95@gmail.com">razeenamd95@gmail</a></p>
 						</div>
 						<div class="footer-style-w3ls">
 							<h4 class="text-li mb-2">Location</h4>
@@ -527,7 +509,7 @@
 	<!-- copyright -->
 	<div class="cpy-right text-center py-3">
 		<p>copyright &copy; All rights reserved | Design by
-			<a href="http://w3layouts.com"> Aarafa Asma.</a>
+			<a href="http://Ufit.com"> Aarafa Asma.</a>
 		</p>
 	</div>
 	<!-- //copyright -->
