--- a/blog.html
+++ b/blog.html
@@ -4,11 +4,11 @@
 <html lang="en">
 
 <head>
-	<title>Befit Sports Category Bootstrap Responsive Website Template | Blog :: W3layouts</title>
+	<title>Ufit A Way for your fitness  | Home :: Ufit</title>
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
-	<meta name="keywords" content="Befit Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+	<meta name="keywords" content="Ufit A Way for your fitness  | Home :: Ufit" />
 	<script>
 		addEventListener("load", function () {
 			setTimeout(hideURLbar, 0);
@@ -531,28 +531,9 @@
 					</form>
 					<!-- social icons -->
 					<div class="agileinfo_social_icons mt-4">
-						<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Connect With Social</h3>
+						<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Connect With Us</h3>
 						<ul class="agileits_social_list list-unstyled">
-							<li>
-								<a href="#" class="w3_agile_facebook">
-									<span class="fa fa-facebook-f"></span>
-								</a>
-							</li>
-							<li class="mx-2">
-								<a href="#" class="agile_twitter">
-									<span class="fa fa-twitter"></span>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="w3_agile_dribble">
-									<span class="fa fa-dribbble"></span>
-								</a>
-							</li>
-							<li class="ml-2">
-								<a href="#" class="w3_agile_google">
-									<span class="fa fa-google-plus"></span>
-								</a>
-							</li>
+						
 						</ul>
 					</div>
 					<!-- social icons -->
@@ -566,7 +547,7 @@
 						</div>
 						<div class="footer-style-w3ls my-4">
 							<h4 class="text-li mb-2">Email </h4>
-							<p><a href="mailto:info@example.com">info@example.com</a></p>
+							<p><a href="mailto:razeenamd95@gmail.com">razeenamd95@gmail.com</a></p>
 						</div>
 						<div class="footer-style-w3ls">
 							<h4 class="text-li mb-2">Location</h4>
@@ -581,7 +562,7 @@
 	<!-- copyright -->
 	<div class="cpy-right text-center py-3">
 		<p>copyright &copy; All rights reserved | Design by
-			<a href="http://w3layouts.com"> Aarafa Asma.</a>
+			<a href="http://Ufit.com"> Aarafa Asma.</a>
 		</p>
 	</div>
 	<!-- //copyright -->
