--- a/contact.html
+++ b/contact.html
@@ -220,35 +220,17 @@
 				</div>
 				<div class="col-md-4 footer-grid_section_1its my-md-0 my-5">
 					<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Newsletter</h3>
-					<p>Be the first to get latest news and offers!<br>Sed ut perspiciatis unde omnis.</p>
+					<p>Be the first to get latest news and offers!<br>recieve latest packages updates.</p>
 					<form action="#" method="post" class="subscribe_form mt-4">
 						<input class="form-control" type="email" name="email" placeholder="Enter your email..." required="">
 						<button type="submit" class="btn btn-primary">Submit</button>
 					</form>
 					<!-- social icons -->
 					<div class="agileinfo_social_icons mt-4">
-						<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Connect With Social</h3>
+						<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Connect With Us</h3>
 						<ul class="agileits_social_list list-unstyled">
-							<li>
-								<a href="#" class="w3_agile_facebook">
-									<span class="fa fa-facebook-f"></span>
-								</a>
-							</li>
-							<li class="mx-2">
-								<a href="#" class="agile_twitter">
-									<span class="fa fa-twitter"></span>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="w3_agile_dribble">
-									<span class="fa fa-dribbble"></span>
-								</a>
-							</li>
-							<li class="ml-2">
-								<a href="#" class="w3_agile_google">
-									<span class="fa fa-google-plus"></span>
-								</a>
-							</li>
+							
+							
 						</ul>
 					</div>
 					<!-- social icons -->
@@ -258,11 +240,11 @@
 					<div class="contact-info">
 						<div class="footer-style-w3ls">
 							<h4 class="text-li mb-2">Phone</h4>
-							<p>+121 098 8907 9987</p>
+							<p>+91-9290945058</p>
 						</div>
 						<div class="footer-style-w3ls my-4">
 							<h4 class="text-li mb-2">Email </h4>
-							<p><a href="mailto:info@example.com">info@example.com</a></p>
+							<p><a href="mailto:razeenamd95@gmail.com">razeenamd95@gmail.com</a></p>
 						</div>
 						<div class="footer-style-w3ls">
 							<h4 class="text-li mb-2">Location</h4>
@@ -277,7 +259,7 @@
 	<!-- copyright -->
 	<div class="cpy-right text-center py-3">
 		<p>copyright &copy; All rights reserved | Design by
-			<a href="http://w3layouts.com"> Aarafa Asma.</a>
+			<a href="http://Ufit.com"> Aarafa Asma.</a>
 		</p>
 	</div>
 	<!-- //copyright -->
