--- a/gallery.html
+++ b/gallery.html
@@ -273,26 +273,7 @@
 					<div class="agileinfo_social_icons mt-4">
 						<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Connect With Social</h3>
 						<ul class="agileits_social_list list-unstyled">
-							<li>
-								<a href="#" class="w3_agile_facebook">
-									<span class="fa fa-facebook-f"></span>
-								</a>
-							</li>
-							<li class="mx-2">
-								<a href="#" class="agile_twitter">
-									<span class="fa fa-twitter"></span>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="w3_agile_dribble">
-									<span class="fa fa-dribbble"></span>
-								</a>
-							</li>
-							<li class="ml-2">
-								<a href="#" class="w3_agile_google">
-									<span class="fa fa-google-plus"></span>
-								</a>
-							</li>
+							
 						</ul>
 					</div>
 					<!-- social icons -->
@@ -302,11 +283,11 @@
 					<div class="contact-info">
 						<div class="footer-style-w3ls">
 							<h4 class="text-li mb-2">Phone</h4>
-							<p>+121 098 8907 9987</p>
+							<p>+91-9290945058</p>
 						</div>
 						<div class="footer-style-w3ls my-4">
 							<h4 class="text-li mb-2">Email </h4>
-							<p><a href="mailto:info@example.com">info@example.com</a></p>
+							<p><a href="mailto:razeenamd95@gmail.com">razeenamd95@gmail.com</a></p>
 						</div>
 						<div class="footer-style-w3ls">
 							<h4 class="text-li mb-2">Location</h4>
@@ -321,7 +302,7 @@
 	<!-- copyright -->
 	<div class="cpy-right text-center py-3">
 		<p>copyright &copy; All rights reserved | Design by
-			<a href="http://w3layouts.com"> Aarafa Asma.</a>
+			<a href="http://Ufit.com"> Aarafa Asma.</a>
 		</p>
 	</div>
 	<!-- //copyright -->
