--- a/single.html
+++ b/single.html
@@ -48,7 +48,7 @@
 				<div class="header d-md-flex justify-content-between align-items-center py-3 px-xl-5 px-lg-3 px-2">
 					<!-- logo -->
 					<div id="logo">
-						<h1><a class="" href="index.html">Befit</a></h1>
+						<h1><a class="" href="index.html">Ufit</a></h1>
 					</div>
 					<!-- //logo -->
 					<!-- nav -->
@@ -454,7 +454,7 @@
 								</div>
 								<div class="col-10">
 									<h2 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">About Us</h2>
-									<p>Sed ut perspiciatis unde omnis iste natus error sit.</p>
+									<p>Contact for more information.</p>
 								</div>
 							</div>
 						</div>
@@ -465,7 +465,7 @@
 								</div>
 								<div class="col-10">
 									<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Who We Are</h3>
-									<p>Error sit antium dolorts remq hymue laud.</p>
+									<p>trained proffestional and nutritionist.</p>
 								</div>
 							</div>
 						</div>
@@ -478,7 +478,7 @@
 								</div>
 								<div class="col-10">
 									<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">We Offer</h3>
-									<p>Sed ut perspiciatis unde omnis iste natus error sit.</p>
+									<p>amiable services.</p>
 								</div>
 							</div>
 						</div>
@@ -489,7 +489,7 @@
 								</div>
 								<div class="col-10">
 									<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Popular In</h3>
-									<p>Error sit antium dolorts remq hymue laud.</p>
+									<p>our services.</p>
 								</div>
 							</div>
 						</div>
@@ -497,7 +497,7 @@
 				</div>
 				<div class="col-md-4 footer-grid_section_1its my-md-0 my-5">
 					<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Newsletter</h3>
-					<p>Be the first to get latest news and offers!<br>Sed ut perspiciatis unde omnis.</p>
+					<p>Be the first to get latest news and offers!<br>recieve latest packages updates.</p>
 					<form action="#" method="post" class="subscribe_form mt-4">
 						<input class="form-control" type="email" name="email" placeholder="Enter your email..." required="">
 						<button type="submit" class="btn btn-primary">Submit</button>
@@ -506,26 +506,7 @@
 					<div class="agileinfo_social_icons mt-4">
 						<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Connect With Social</h3>
 						<ul class="agileits_social_list list-unstyled">
-							<li>
-								<a href="#" class="w3_agile_facebook">
-									<span class="fa fa-facebook-f"></span>
-								</a>
-							</li>
-							<li class="mx-2">
-								<a href="#" class="agile_twitter">
-									<span class="fa fa-twitter"></span>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="w3_agile_dribble">
-									<span class="fa fa-dribbble"></span>
-								</a>
-							</li>
-							<li class="ml-2">
-								<a href="#" class="w3_agile_google">
-									<span class="fa fa-google-plus"></span>
-								</a>
-							</li>
+							
 						</ul>
 					</div>
 					<!-- social icons -->
@@ -535,11 +516,11 @@
 					<div class="contact-info">
 						<div class="footer-style-w3ls">
 							<h4 class="text-li mb-2">Phone</h4>
-							<p>+121 098 8907 9987</p>
+							<p>+91-9290945058</p>
 						</div>
 						<div class="footer-style-w3ls my-4">
 							<h4 class="text-li mb-2">Email </h4>
-							<p><a href="mailto:info@example.com">info@example.com</a></p>
+							<p><a href="razeenamd95@gmail">razeenamd95@gmail</a></p>
 						</div>
 						<div class="footer-style-w3ls">
 							<h4 class="text-li mb-2">Location</h4>
@@ -554,7 +535,7 @@
 	<!-- copyright -->
 	<div class="cpy-right text-center py-3">
 		<p>copyright &copy; All rights reserved | Design by
-			<a href="http://w3layouts.com"> Aarafa Asma.</a>
+			<a href="http://Ufit.com"> Aarafa Asma.</a>
 		</p>
 	</div>
 	<!-- //copyright -->
