--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 								</div>
 								<div class="col-10">
 									<h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3">Who We Are</h3>
-									<p>trained proffestional and nutritionist.</p>
+									<p>trained professional and nutritionist.</p>
 								</div>
 							</div>
 						</div>
@@ -494,7 +494,7 @@
 						</div>
 						<div class="footer-style-w3ls my-4">
 							<h4 class="text-li mb-2">Email </h4>
-							<p><a href="mailto:razeenamd95@gmail.com">razeenamd95@gmail</a></p>
+							<p><a href="mailto:razeenamd95@gmail.com">razeenamd95@gmail.com</a></p>
 						</div>
 						<div class="footer-style-w3ls">
 							<h4 class="text-li mb-2">Location</h4>
