--- a/single.html
+++ b/single.html
@@ -520,7 +520,7 @@
 						</div>
 						<div class="footer-style-w3ls my-4">
 							<h4 class="text-li mb-2">Email </h4>
-							<p><a href="razeenamd95@gmail">razeenamd95@gmail</a></p>
+							<p><a href="razeenamd95@gmail.com">razeenamd95@gmail.com</a></p>
 						</div>
 						<div class="footer-style-w3ls">
 							<h4 class="text-li mb-2">Location</h4>
