--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
 						</div>
 						<div class="col-md-10 col-sm-10 col-10 contact-text-agileinf0">
 							<h4>Mail us</h4>
-							<p><a href="mailto:info@example.com">info@example.com</a></p>
+							<p><a href="mailto:razeenamd95@gmail.com">razeenamd95@gmail.com</a></p>
 						</div>
 					</div>
 					<div class="row call">
