--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div class="header d-md-flex justify-content-between align-items-center py-3 px-xl-5 px-lg-3 px-2">
 					<!-- logo -->
 					<div id="logo">
-						<h1><a class="" href="index.html">Ufit</a></h1>
+						<h1><a class="" href="index.html">Ufit (U-Fat Initial transformation) </a></h1>
 					</div>
 					<!-- //logo -->
 
